# unbound

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  README_RELEASE.txt  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  RELEASE_v2.md  TESTING.md  app.go  app_darwin.go  app_linux.go  app_tray.go  app_tray_darwin.go  app_tray_linux.go  app_windows.go  build.ps1  build_all.ps1  build_all.sh  build_release.ps1  cli_test.go  config.json  conflicts_darwin.go  conflicts_windows.go  final_launch.ps1  final_launch.sh  gen_correct_tls.py  go.mod  go.sum  index.html  main.go  main_darwin.go  main_integration_test.go  main_linux.go  main_windows.go  publish.ps1  publish_release.ps1  (+10 more)
_astro/: index.-SSJxWWw.css  index.BC3e4jMW.css  index.BQ0fBVTc.css  index.BbP_ccMI.css  index.BhLkoEax.css  index.BnSwmRRy.css  index.C-OIlVvf.css  index.C93wruPc.css  index.CFZGrIxk.css  index.CXNUcrnN.css  index.CbOtFuSf.css  index.D7J9_bZW.css  index.DBSJ6PDt.css  index.DO2dGwMP.css  index.FiYgxtA9.css  index.UT19rBXp.css
android/: README.md  settings.gradle.kts
decky-plugin/: main.py  package-lock.json  package.json  plugin.json  rollup.config.js  tsconfig.json
docs/: BUILDING.md  PLATFORMS.md  SMART_TV.md  TESTING.md  release-notes.txt
engine/: assets.go  autottl.go  autottl_test.go  autotune.go  autotune_integration_test.go  autotune_test.go  blob_system.go  blob_system_test.go  common_types.go  config.go  config_darwin.go  config_linux.go  config_windows.go  diagnostics.go  diagnostics_darwin.go  diagnostics_linux.go  diagnostics_test.go  diagnostics_windows.go  engine.go  healthcheck.go  healthcheck_nonwindows.go  healthcheck_windows.go  ip_cache.go  ip_cache_test.go  list_manager.go  logger.go  notification.go  orchestrator.go  platform_paths.go  prober.go  prober_test.go  protocol_manipulation.go  scanner.go  startup_darwin.go  startup_validator.go  startup_windows.go  startup_windows_test.go  strategies.go  strategies_advanced.go  strategies_test.go  (+6 more)
extension-web/: .env.example  GETTING_STARTED.md  PROJECT_SUMMARY.md  README.md  host_manifest.json  manifest.chrome.ts  manifest.firefox.ts  package-lock.json  package.json  popup.html  tailwind.config.js  vite.config.ts
frontend/: index.html  package-lock.json  package.json  (+1 more)
linux/: Cargo.toml  README.md
linux/src/: config.rs  daemon.rs  error.rs  main.rs  nfqws.rs  nftables_mgr.rs
webos/native/nfqws/: CMakeLists.txt  Makefile
webos/native/nfqws/lists/: youtube.txt
(+221 files in other folders)
